--- a/mvnprojectpractice/pom.xml
+++ b/mvnprojectpractice/pom.xml
@@ -102,6 +102,14 @@
     <version>7.7.1</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    <scope>provided</scope>
+</dependency>
+
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
     <groupId>commons-io</groupId>
